# Bizzare

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build
include/: database.h  helpers.h  network.h
src/: bizzare.cpp  database.cpp  helpers.cpp  network.cpp
