cmake_minimum_required(VERSION 3.10)
project("Bizzare" VERSION 1 DESCRIPTION "Network usage prediction" LANGUAGES C CXX)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
include_directories(include)
file(GLOB SOURCES "src/*.cpp")
add_executable(bizzare ${SOURCES})

if(DEFINED ENV{DEBUG})
  target_compile_definitions(bizzare PUBLIC -DDEBUG)
  target_compile_options(bizzare PUBLIC -g -O0)
else()
  target_compile_options(bizzare PUBLIC -O3 -Werror)
endif()
target_link_libraries(bizzare netfilter_conntrack)
